cabal-version:       2.4
name:                annotateExec
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/andrevdm/annotateExec#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2019 Andre Van Der Merwe
category:            Console
build-type:          Simple
extra-source-files:  README.md

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wmissing-export-lists -Wpartial-fields -fhide-source-paths -freverse-errors
  hs-source-dirs:      src
  exposed-modules:     AnnotateExec
  build-depends:       base >= 4.10.1.0 && < 5
                     , protolude ^>= 0.2.3
                     , text ^>= 1.2.3.1
                     , containers ^>= 0.6.0.1
                     , pretty-simple ^>= 2.2.0.1
                     , ansi-terminal ^>= 0.8.2
                     , colour ^>= 2.3.5
                     , filepath ^>= 1.4.2.1
  default-language:    Haskell2010

executable annotateExec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wmissing-export-lists -Wpartial-fields -fhide-source-paths -freverse-errors
  build-depends:       base
                     , annotateExec
                     , protolude ^>= 0.2.3
                     , text ^>= 1.2.3.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/annotateExec
